public/assignment/css/style.css
input.form-control,
textarea,
select{
    margin-bottom: 5px;
}

body {
    padding-top: 60px;
    padding-bottom: 60px;
}
nav.navbar.navbar-default.navbar-fixed-top{
    padding-right: 15px;

}

nav.navbar.navbar-default.navbar-fixed-bottom{
    padding-right: 15px;

}
.navbar-default .navbar-text {
    color: #ffffff;
}


.navbar-default{
    background-color: #222222;
    border-color: #080808;
}

.navbar-default .navbar-brand {
    color: #ffffff;
}
.navbar-header{
    width:100%
}

.navbar-default .navbar-link{
    color:#ffffff;
}

.navbar.navbar-default a{
    color:#ffffff;
}

.wd-padding-right-15px{
    padding-right: 15px;
}
.wd-active-cornflowerblue-bg{
    background-color: cornflowerblue;
}

.wd-widget {
    margin-bottom: 10px;
    padding-left: 15px;
    padding-right: 15px;
}

.wd-widget > img {
    width: 100%;
}

.wd-widget > .wd-widget-toolbar {
    position: absolute;
    right: 30px;
    background: black;
    opacity: 0.5;
    padding: 5px;
    border-bottom-left-radius: 10px;
}

.wd-widget-video-container{

    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    z-index: -1;
}

.wd-widget-video-container iframe{
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
}

.wd-navbar-back{

    padding-right: 5px;
    padding-bottom: 15px;
    padding-top: 15px;

}
.wd-padding-left-15px{
    padding-left: 15px;
}
.wd-no-left-padding{
    padding-left: 0px;!important;
}

.wd-text-justify{
    text-align: justify;
}

